--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 <section id="banner">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-6 col-sm-6 col-md-6">
+            <div class="col-lg-6 col-12 col-sm-12 col-md-6">
                 <div class="banner-img">
-                    <img src="images/banner.png" alt="banner" class="img-fluid w-100">
+                    <img src="images/banner.png" alt="banner" class="img-fluid">
                 </div>
             </div>
-            <div class="col-lg-6 col-6 col-sm-6 col-md-6">
+            <div class="col-lg-6 col-12 col-sm-12 col-md-6">
                 <div class="banner-content">
                     <h6>today's jackpot</h6>
                     <h1 id="typed">777</h1>
@@ -135,21 +135,21 @@
 <section id="game">
     <div class="container">
         <div class="row entry-part">
-            <div class="col-lg-4 px-0 mx-0 col-4 col-sm-4 col-md-4">
+            <div class="col-lg-4 px-0 mx-0 col-12 col-sm-4 col-md-4">
                 <div class="box text-center wow animate__animated animate__flipInY animate__slower	2s">
                     <h2>01</h2>
                     <h4>register</h4>
                     <p>download the app and signup for accout</p>
                 </div>
             </div>
-            <div class="col-lg-4 px-0 mx-0 col-4 col-sm-4 col-md-4">
+            <div class="col-lg-4 px-0 mx-0 col-12 col-sm-4 col-md-4">
                 <div class="box shadow text-center wow animate__animated animate__flipInY animate__slower	2s">
                     <h2>02</h2>
                     <h4>get ready</h4>
                     <p>deposit & get ready for play betting</p>
                 </div>
             </div>
-            <div class="col-lg-4 px-0 mx-0 col-4 col-sm-4 col-md-4">
+            <div class="col-lg-4 px-0 mx-0 col-12 col-sm-4 col-md-4">
                 <div class="box shadow text-center  wow animate__animated animate__flipInY animate__slower 2s">
                     <h2>03</h2>
                     <h4>enjoy</h4>
